[package]
name = "NewsBot"
version = "0.1.0"
authors = ["fatalcenturion <38751451+fatalcenturion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.6"
rss = "1.9.0"
mysql_async = "0.23.1"
tokio = { version = "0.2.21", features = ["full"] }
chrono = "0.4.11"
dotenv = "0.15.0"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"